# rle-lr-stick-gmt

./: .gitignore  Cargo.toml  README.md  gnd_acc_LRtf_comparison.m  pprocess_pierD_simdt.m  processing.ipynb  rle_gndAcc_psd.m  setup.sh
simulink/: compare_pierD_simdt.m  load_P102482_LIS1R1.m  load_rle_sim_stickGMT.m  rle_sim_stickGMT.slx
